--- a/css/style.css
+++ b/css/style.css
@@ -114,3 +114,107 @@ a:active {
 .footer::before {
 	content: "Powered by Comp433-Course ©.";
 }
+.login {
+	text-align: center;
+	border: 2px solid silver;
+	margin: 200px;
+	padding: 50px;
+}
+body.aboutus {
+	font-family: 'Handlee', cursive;
+	font-size: 13pt;
+	background-color: #efefef;
+	padding: 10px;
+	margin: 0;
+}
+h1.aboutus {
+	font-size: 15pt;
+	color: #20bcd5;
+	text-align: center;
+	padding: 18px 0 18px 0;
+	margin: 0 0 10px 0;
+	
+}
+h1 span {
+	border: 4px dashed #20bcd5;
+	padding: 10px;
+	
+}
+p.aboutus {
+	padding: 0;
+	margin: 0;
+}
+.section {
+	background-color: #fff;
+	padding: 15px;
+	margin-bottom: 10px;
+	border-radius: 10px;
+}
+
+body.aboutus {
+	font-family: 'Handlee', cursive;
+	font-size: 13pt;
+	background-color: #efefef;
+	padding: 10px;
+	margin: 0;
+}
+h1.aboutus {
+	font-size: 15pt;
+	color: #20bcd5;
+	text-align: center;
+	padding: 18px 0 18px 0;
+	margin: 0 0 10px 0;
+	
+}
+h1 span {
+	border: 4px dashed #20bcd5;
+	padding: 10px;
+	
+}
+p.aboutus {
+	padding: 0;
+	margin: 0;
+}
+.section {
+	background-color: #fff;
+	padding: 15px;
+	margin-bottom: 10px;
+	border-radius: 10px;
+}
+hr {
+	border: 0;
+	height: 10px;
+	background: #f36f48;
+}
+form {
+	text-align: center;
+	margin-top: 0;
+}
+.submit {
+	background-color: #3fb6b2;
+	padding: 12px 45px;
+	border-radius: 5px;
+	cursor: pointer;
+	color: #ffffff;
+	border: none;
+	outline: none;
+	margin: 0;
+	font-weight: bold;
+}
+.submit:hover {
+	background-color: #43a09d;
+}
+textarea {
+	height: 100px;
+}
+input, textarea {
+	margin-bottom: 10px;
+	font-size: 11pt;
+	padding: 15px 10px 10px;
+	border: 1px solid #cecece;
+	background-color: #efefef;
+	color: #787575;
+	border-radius: 5px;
+	width: 70%;
+	outline: none;
+}
