--- a/css/applyCSS.css
+++ b/css/applyCSS.css
@@ -1,17 +1,30 @@
 body{
     margin: 0;
 }
+
+header{
+    width: 100%;
+    height: 180px;
+    background-color: #333333;
+    color: white;
+}
 #content{
-    background: url("../images/classroom.png") no-repeat;
+    background: url("../images/classroom.png") no-repeat fixed;
     margin: 0;
 }
 
+#content section{
+    /*margin: 30% 10% 10% 30%;*/
+    padding: 5% 25% 5% 25%;
+}
 #form_layout{
     background: white;
     width: 400px;
     padding: 20px 20px 50px 20px;
-    margin-left: 50%;
-    margin-top: 5%;
+    margin-left: 10%;
+    /*margin-right: 10%;*/
+    /*margin-top: 5%;*/
+    display: inline-block;
 }
 
 #form_layout p{
@@ -45,9 +58,12 @@ body{
 }
 
 #about {
-    width: 200px;
+    width: 400px;
+    font-size: 30px;
     margin-left: 10px;
     margin-top: 5px;
+    display: inline-block;
+    vertical-align: top;
 }
 
 #about h1,p{
