--- a/css/header.css
+++ b/css/header.css
@@ -2,7 +2,6 @@ header{
     width: 100%;
     height: 160px;
     background-color: #333333;
-    color: white;
     position: relative;
 }
 
@@ -12,11 +11,21 @@ header img{
     margin: 15px 0 0 15px;
 }
 
+header h1{
+    display: inline;
+    color: #858585;
+    position: absolute;
+    /*vertical-align: center;*/
+    margin: 45px 0 0 12px;
+    font-size: 45px;
+}
+
 header a[href="school-login.html"]{
     color: white;
     float: right;
     margin: 10px 20px 0 0;
     font-size: 20px;
+    text-decoration: none;
 }
 
 header nav{
@@ -27,12 +36,17 @@ header nav{
 }
 
 header nav a{
-    color: white;
+    color: #858585;
     padding-right: 10px;
     padding-left: 10px;
     font-size: 23px;
+    text-decoration: none;
+}
+
+header nav a:hover{
+    color: #cecece;
 }
 
 .nav_bar{
-    border-right: solid white;
+    border-right: solid #858585;
 }
